--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "ts-node src/seedDatabase.ts",
+    "start": "ts-node server.ts"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +13,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
     "openai": "^4.78.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
