--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/babel__core": "^7.20.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.5",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
