--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/supertest": "^6.0.2",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
