--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
+    "outDir": "./built",
+    "allowJs": true,
     "resolveJsonModule": true,  // Allow importing JSON modules
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node"]
   },
   "include": ["**/*.ts", "firebase.ts"],
   "exclude": ["node_modules"]
