--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "typeRoots": ["node_modules/@types"],
     "types": ["node"]
   },
-  "include": ["**/*.ts", "firebase.ts"],
+  "include": ["firebase.ts"],
   "exclude": ["node_modules"]
 }
