--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "font-awesome": "^4.7.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
