--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
+    "node-cron": "^3.0.3",
     "openai": "^4.78.0",
     "postman": "^0.2.0",
     "supertest": "^7.0.0"
