--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.2",
+    "rollup": "^4.30.1",
     "styled-components": "^6.1.14",
     "tailwindcss": "^3.4.17"
   },
