--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "natural": "^8.0.1",
     "node-cron": "^3.0.3",
     "openai": "^4.78.0",
     "postman": "^0.2.0",
