--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-cron": "^3.0.3",
     "openai": "^4.78.0",
     "postman": "^0.2.0",
+    "string-similarity": "^4.0.4",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
+    "@types/string-similarity": "^4.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
