--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.0.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
