--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.4.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.0.0",
+    "keep-react": "^1.6.1",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
