--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.2",
