--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^7.1.2",
     "rollup": "^4.30.1",
     "styled-components": "^6.1.14",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
