--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.4.0",
     "autoprefixer": "^10.4.20",
@@ -27,6 +28,8 @@
     "framer-motion": "^12.0.0",
     "keep-react": "^1.6.1",
     "postcss": "^8.5.1",
+    "postcss-functions": "^4.0.2",
+    "purgecss": "^7.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
